--- a/homepage.html
+++ b/homepage.html
@@ -38,7 +38,7 @@
                     <li class="navbar-item"><a class="navbar-link" href="#!">Home</a></li>
                     <li class="navbar-item">
                         <div class="dropdown">
-                            <button class="dropbtn"><a href="#!">Products&#8744;</a></button>
+                            <button class="dropbtn">Products&#8744;</button>
                             <div class="dropdown-content">
                                 <a href="#!">MAGIC SINGLES</a>
                                 <a href="#!">SEALED</a>
@@ -51,7 +51,7 @@
                     <li class="navbar-item"><a class="navbar-link" href="#!">Contact Us</a></li>
                     <li class="navbar-item">
                         <div class="dropdown">
-                            <button class="dropbtn"><a href="#!">MORE&#8744;</a></button>
+                            <button class="dropbtn">MORE&#8744;</button>
                             <div class="dropdown-content">
                                 <a href="#!">D & D</a>
                                 <a href="#!">USED GAMES</a>
@@ -64,7 +64,7 @@
             <div class="navbar__right">
                 <form>
                     <input placeholder="Search products..." type="text">
-                    <button type="search"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <button><i class="fa-solid fa-magnifying-glass"></i></button>
                 </form>
                 <ul class="navbar__list">
                     <li class="navbar-item"><a class="navbar-link" href="#!"><i class="fa-solid fa-magnifying-glass-plus"></i></a></li>
@@ -115,12 +115,11 @@
             <p>We grade every <em>Magic</em> card in our inventory carefully so you can be certain you know exactly what you’re paying for. For more details on Lodestone’s grading system, consult the <a class="footer__link" href="#!"><strong>Condition Guide.</strong></a></p>
         </div>
         <div class="footer__section">
-    <h2 class="footer__title"><span>Disclaimers</span></h2>
+            <h2 class="footer__title"><span>Disclaimers</span></h2>
             <a class="footer__link" href="#!"><strong>Privacy Policy</strong></a>
             <a class="footer__link" href="#!"><strong>Terms and Conditions</strong></a>
         </div>
     </div>
-</footer>
-<p class="legal">© 2024 • Lodestone Coffee and Games, LLC • All Rights Reserved
-</p>
+</footer>    
+<p class="legal">© 2024 • Lodestone Coffee and Games, LLC • All Rights Reserved</p>
 </html>
